tests/models/enum/unnamed/i8/fail/max_items.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(max_items = 2)]
        i8
    ),
}
fn main() {}
